Revise README.md for project clarity and structure
Updated project overview and structure details in README.md.